First go at drawing box around embryo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,8 @@ file.reference.imagej-common-0.24.1.jar=/home/peteyk/.m2/repository/net/imagej/i
 file.reference.imglib2-3.2.0.jar=/home/peteyk/.m2/repository/net/imglib2/imglib2/3.2.0/imglib2-3.2.0.jar
 file.reference.imglib2-ij-2.0.0-beta-34.jar=/home/peteyk/.m2/repository/net/imglib2/imglib2-ij/2.0.0-beta-34/imglib2-ij-2.0.0-beta-34.jar
 file.reference.jhdf5-14.12.0.jar=/home/peteyk/.m2/repository/ch/systems/cisd/jhdf5/14.12.0/jhdf5-14.12.0.jar
+file.reference.mcib3d-core.jar=/home/peteyk/Fiji.app/plugins/mcib3d-suite/mcib3d-core.jar
+file.reference.mcib3d_plugins.jar=/home/peteyk/Fiji.app/plugins/mcib3d-suite/mcib3d_plugins.jar
 file.reference.scijava-common-2.60.2.jar=/home/peteyk/.m2/repository/org/scijava/scijava-common/2.60.2/scijava-common-2.60.2.jar
 includes=**
 jar.compress=false
@@ -43,7 +45,9 @@ javac.classpath=\
     ${file.reference.imglib2-3.2.0.jar}:\
     ${file.reference.imglib2-ij-2.0.0-beta-34.jar}:\
     ${file.reference.imagej-common-0.24.1.jar}:\
-    ${file.reference.scijava-common-2.60.2.jar}
+    ${file.reference.scijava-common-2.60.2.jar}:\
+    ${file.reference.mcib3d-core.jar}:\
+    ${file.reference.mcib3d_plugins.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
